fix HeaderNav css media screen (z-index (burger-menu), icon and logo (reduced at 700 ...), delete height, fix Banner css (text, button and delete height), fix Categories css, CategoriesList css and CategoriesRender jsx and css (fix media screen, image - weight: 100%, object-fit:cover), and cheange Link

--- a/src/components/Banner/Banner.module.css
+++ b/src/components/Banner/Banner.module.css
@@ -1,9 +1,4 @@
 .container {
-  width: 100%;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 var(--size-middle-plus);
-
   /* removes scrolling on a background-image */
   display: flex;
 
@@ -11,19 +6,13 @@
     url("../../assets/images/baner_images.jpg");
   background-size: cover;
   background-position: center bottom;
-  
-
-  /* transition smoothtransitions to height and width */
-  transition: height 2s, width 2s;
   height: 600px;
 }
 
 .context_container {
-  padding: 50px 20px 0 0;
+  padding: 30px 20px 0 0;
   max-width: 1360px;
-  height: 310px;
-  display: grid;
-  gap: 80px;
+  margin-left: 30px;
 }
 
 .text_amazing__discounts {
@@ -44,24 +33,21 @@
   font-size: 20px;
 }
 
-.button_check:hover{
+.button_check:hover {
   cursor: pointer;
   background-color: #afc905;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1439px) {
   .container {
     padding: 0 var(--size-small-plus);
-    height: 476px;
   }
 
   .context_container {
-    padding: 20px 20px 0 0;
     max-width: 960px;
   }
 
   .text_amazing__discounts {
-    height: 198px;
     line-height: 90px;
     font-size: 80px;
   }
@@ -73,7 +59,7 @@
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 999px) {
   .container {
     padding: 0 var(--size-small-plus);
     height: 634px;
@@ -84,20 +70,16 @@
   }
 
   .text_amazing__discounts {
-    height: 150px;
     line-height: 74px;
-    font-size: 68px;
     margin-bottom: 50px;
-    word-wrap: break-word;
   }
 
   .button_check {
-    padding: 16px, 56px, 16px, 56px;
     font-size: 20px;
   }
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 769px) {
   .container {
     padding: 0 var(--size-small-plus);
     height: 600px;
@@ -105,27 +87,37 @@
 
   .context_container {
     width: 425px;
+    padding: 30px 10px 0 0;
+    margin-left: 10px;
   }
 
   .text_amazing__discounts {
-    height: 264px;
     line-height: 66px;
     font-size: 60px;
   }
 
-   .button_check {
+  .button_check {
     margin-top: 20px;
   }
 }
 
-@media screen and (max-width: 360px) {
+@media screen and (max-width: 479px) {
+.text_amazing__discounts {
+  font-size: 52px;
+  line-height: 57px;
+}
 
   .context_container {
     width: 600px;
+    padding: 20px 5px 0 0;
+    margin-left: 5px;
   }
 
   .text_amazing__discounts {
     height: 228px;
   }
 
+    .button_check {
+    margin-top: 10px;
+  }
 }
