--- a/src/components/Categories/Categories.module.css
+++ b/src/components/Categories/Categories.module.css
@@ -1,14 +1,14 @@
 .info_container img {
-  max-width: 310px;
+  max-width: 100%;
   height: 310px;
   border-radius: var(--radius-big);
   overflow: hidden;
-  transition: width 0.3ms height 0.3ms;
+ object-fit: cover;
 }
 
-.info_container img:hover {
+/* .info_container img:hover {
   transform: scale(1.02);
-}
+} */
 
 .info_container p {
   display: flex;
@@ -28,33 +28,19 @@
 
 @media screen and (max-width: 1439px) {
   .info_container img {
-    max-width: 280px;
     height: 280px;
-    transition: width 0.3ms height 0.3ms;
   }
 }
 
 @media screen and (max-width: 999px) {
   .info_container img {
-    max-width: 225px;
     height: 225px;
-    transition: width 0.3ms height 0.3ms;
   }
 }
 
 @media screen and (max-width: 760px) {
   .info_container img {
-    max-width: 300px;
     height: 220px;
-    transition: width 0.3ms height 0.3ms;
-  }
-}
-
-
-@media screen and (max-width: 500px) {
-  .info_container img {
-    max-width: 210px;
-    transition: width 0.3ms height 0.3ms;
   }
 }
 
